# glfw_boilerplate

./: CMakeLists.txt  README.md  global.h  main.c  mouse.c  mouse.h
gl/lib/: glfw3.lib
